--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby-plugin-offline": "^3.2.12",
     "gatsby-plugin-react-helmet": "^3.3.6",
     "gatsby-plugin-sharp": "^2.6.13",
+    "gatsby-remark-copy-linked-files": "^2.3.7",
     "gatsby-remark-images": "^3.3.13",
     "gatsby-remark-relative-images": "^0.3.0",
     "gatsby-source-filesystem": "^2.3.14",
@@ -41,7 +42,7 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
-    "update":"git submodule update --remote"
+    "update": "git submodule update --remote"
   },
   "repository": {
     "type": "git",
