--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gatsby-plugin-catch-links": "^2.3.7",
     "gatsby-plugin-exclude": "^1.0.2",
     "gatsby-plugin-manifest": "^2.4.13",
+    "gatsby-plugin-material-ui": "^2.1.9",
     "gatsby-plugin-offline": "^3.2.12",
     "gatsby-plugin-react-helmet": "^3.3.6",
     "gatsby-plugin-sharp": "^2.6.13",
