--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "gatsby-plugin-sharp": "^2.6.13",
     "gatsby-remark-copy-linked-files": "^2.3.7",
     "gatsby-remark-images": "^3.3.13",
+    "gatsby-remark-katex": "^3.3.10",
     "gatsby-remark-relative-images": "^0.3.0",
     "gatsby-source-filesystem": "^2.3.14",
-    "gatsby-transformer-remark": "^2.8.19",
+    "gatsby-transformer-remark": "^2.8.30",
     "gatsby-transformer-sharp": "^2.5.6",
+    "katex": "^0.12.0",
     "netlify-plugin-gatsby-cache": "^0.3.2",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
