--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/pages/classes/cs61a"]
 	path = src/pages/classes/cs61a
 	url = git@github.com:shreystechtips/cs61a
+[submodule "src/pages/classes/phys7b"]
+	path = src/pages/classes/phys7b
+	url = git@github.com:shreystechtips/phys7b
