add eecs16a notes

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "src/pages/classes/phys7b"]
 	path = src/pages/classes/phys7b
 	url = git@github.com:shreystechtips/phys7b
+[submodule "src/pages/classes/eecs16a"]
+	path = src/pages/classes/eecs16a
+	url = git@github.com:shreystechtips/eecs16a.git
