--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@material-ui/core": "^4.10.2",
     "@material-ui/icons": "^4.9.1",
+    "caniuse-lite": "^1.0.30001187",
     "dotenv": "^8.2.0",
     "gatsby": "^2.24.12",
     "gatsby-image": "^2.4.8",
@@ -26,7 +27,7 @@
     "gatsby-source-filesystem": "^2.3.14",
     "gatsby-transformer-remark": "^2.8.30",
     "gatsby-transformer-sharp": "^2.5.6",
-    "katex": "^0.12.0",
+    "katex": "^0.10.0",
     "netlify-plugin-gatsby-cache": "^0.3.2",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
