--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "dependencies": {
     "@material-ui/core": "^4.10.2",
     "@material-ui/icons": "^4.9.1",
-    "caniuse-lite": "^1.0.30001187",
     "dotenv": "^8.2.0",
     "gatsby": "^2.24.12",
     "gatsby-image": "^2.4.8",
@@ -16,7 +15,6 @@
     "gatsby-plugin-google-analytics": "^2.3.13",
     "gatsby-plugin-manifest": "^2.4.13",
     "gatsby-plugin-material-ui": "^2.1.9",
-    "gatsby-plugin-netlify-cache": "^1.2.0",
     "gatsby-plugin-offline": "^3.2.12",
     "gatsby-plugin-react-helmet": "^3.3.6",
     "gatsby-plugin-sharp": "^2.6.13",
@@ -36,6 +34,7 @@
     "react-media": "^1.10.0"
   },
   "devDependencies": {
+    "@netlify/plugin-gatsby": "^1.0.3",
     "prettier": "2.0.5"
   },
   "keywords": [
